--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "node-spotify-api": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
