--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.10",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.1.3",
@@ -36,6 +42,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
+    "react-reorder": "^3.0.0-alpha.7",
+    "react-sortable-hoc": "^1.11.0",
+    "react-table": "^7.0.4",
     "redux": "^4.0.5"
   },
   "devDependencies": {
