--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-reorder": "^3.0.0-alpha.7",
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.0.4",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
