--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "express": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js",
@@ -28,10 +29,12 @@
     "@material-ui/styles": "^4.9.10",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.4",
     "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^5.0.0",
+    "node-cache": "^5.1.0",
     "node-sass": "^4.13.1",
     "node-spotify-api": "^1.1.1",
     "prop-types": "^15.7.2",
@@ -43,7 +46,11 @@
     "react-table": "^7.0.4",
     "redux": "^4.0.5",
     "spotify-web-api-node": "4.0.0",
-    "dotenv": "^8.2.0"
+    "express": "^4.14.0",
+    "axios": "0.15.3",
+    "body-parser": "1.15.2",
+    "compression": "1.6.2",
+    "path-match": "^1.2.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -60,7 +67,8 @@
     "jest": "^25.3.0",
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "nodemon": "1.11.0"
   },
   "jest": {
     "collectCoverage": true,
