--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "@material-ui/styles": "^4.9.10",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.4",
     "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^5.0.0",
     "node-sass": "^4.13.1",
-    "node-spotify-api": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-redux": "^7.2.0",
     "react-reorder": "^3.0.0-alpha.7",
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.0.4",
     "redux": "^4.0.5",
-    "spotify-web-api-node": "4.0.0",
-    "dotenv": "^8.2.0"
+    "spotify-web-api-node": "4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
