--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.10",
