--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.10",
     "@zeit/next-css": "^1.0.1",
+    "array-move": "^2.2.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
