--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "eslint --fix .  --ext .js",
     "pretty": "prettier --write \"./**/*.{js,jsx}\"",
     "precommit": "NODE_ENV=production lint-staged",
+    "analyze": "cross-env ANALYZE=true yarn build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -30,9 +31,11 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.10",
+    "@next/bundle-analyzer": "^9.3.5",
     "@zeit/next-css": "^1.0.1",
     "array-move": "^2.2.1",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "isomorphic-unfetch": "^3.0.0",
