--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@zeit/next-css": "^1.0.1",
     "array-move": "^2.2.1",
     "body-parser": "^1.19.0",
+    "deep-equal": "^2.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "isomorphic-unfetch": "^3.0.0",
